# group-trip-planner

./: .gitignore  app.py  main.py  pyproject.toml  response.json  run_graph.py
src/packvote/: __init__.py
src/packvote/backend/: __init__.py
src/packvote/backend/entity/: __init__.py  create_vector_db.py
src/packvote/backend/nodes/: evaluator.py  researcher.py  retrieve.py  supervisor.py
src/packvote/backend/pipelines/: __init__.py  get_user_prefs.py
src/packvote/backend/tools/: search.py  weather.py
src/packvote/backend/utils/: langgraph_elements.py  overlapping_dates.py  prompt_formatters.py  state_helpers.py  utils.py
src/packvote/entity/: create_vector_db.py
src/packvote/frontend/static/css/: styles.css
src/packvote/frontend/static/js/: datePicker.js  dropdownMenus.js  formHandlers.js  locationAutocomplete.js  main.js  projectManager.js  utils.js
src/packvote/frontend/templates/: index.html
src/packvote/notebooks/: itinerary_testing.ipynb  testing.ipynb
src/packvote/tools/: search.py  weather.py
src/packvote/utils/: utils.py
